# typhoon-lite

./: Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
src/: main.py
src/api/: main.py  schemas.py
src/api/routes/: assets.py  models.py
src/database/: aerich_config.py  models.py  pyproject.toml
src/database/migrations/models/: 0_20240415124256_init.py  1_20240418121852_update.py  2_20240426185100_update.py  3_20240419131755_update.py  4_20240422220942_update.py
src/kafka/: services.py
src/kafka/management/commands/: signal.py
src/model_core/: failed_requests_trainer.py  services.py  trainer.py
src/model_core/model_builders/: lstm_model.py  model_base.py
src/model_core/model_utils/: model_factory.py  window_generator.py  window_pipeline.py
src/utils/: logger.py
